src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

input[type="number"],
input[type="text"] {
  outline: none;
  background-color: #eef3f8;
  background-repeat: no-repeat;
  border-radius: 4px;
  height: 25px;
  min-height: 25px;
  margin: 10px auto;
  border: 2px solid transparent;
}

input[type="number"][disabled],
input[type="text"][disabled] {
  background-color: #868a8a;
}

select {
  height: 30px;
  padding-left: 10px;
  background-color: #eef3f8;
  border-radius: 4px;
}

.input-group {
  box-sizing: border-box;
  display: flex;
  margin-top: 16px;
  margin-bottom: 16px;
  flex-direction: column;
  width: 100%;
}

.input-group:has(> .input-group) {
  flex-direction: row;
}

.input-group:has(> input):has(> button) {
  flex-direction: row;
  flex-wrap: wrap;
}


.input-group:has(> input):has(> button) > input {
  flex-basis: 80%;
  border-radius: 4px 0 0 4px;
}

.input-group:has(> input):has(> button) > button {
  border-radius: 0 4px 4px 0;
  width: 30px;
  margin-top: 2px;
  border-left: 1px solid black;
}

.input-group > .input-group {
  margin-top: 0;
  margin-bottom: 0;
}

.input-group > .input-group:not(:first-child) {
  margin-left: 12px;
}

.input-group > label {
  box-sizing: border-box;
  width: 100%;
  text-align: left;
  font-size: 12px;
}

.input-group > input {
  box-sizing: border-box;
  height: 30px;
  width: 100%;
  margin-top: 2px;
  padding-left: 10px;
}

.input-group > button {
  border-radius: 4px;
  box-sizing: border-box;
  height: 30px;
  flex-grow: 1;
  border: none;
  border-left: 1px solid black;
}

.clickable {
  cursor: pointer;
}

.modal {
  display: none;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4);
}

.modal.visible {
  display: block;
}

.modal .modal-content {
  position: absolute;
  left: 50%;
  top: 45%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.modal .close {
  color: #aaa;
  float: right;
  font-size: 25px;
  font-weight: bold;
  font-family: monospace;
  margin: 10px 20px;
  cursor: pointer;
}

.project-links {
  position: absolute;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: row;
  justify-content: center;
}


.github-project-link {
  left: 0;
  bottom: 0;
  margin-left: 16px;
  margin-bottom: 10px;
}

.github-project-link > img {
  height: 20px;
  width: 20px;
  opacity: 0.5;
}

.github-project-link:hover > img {
  opacity: 1;
}

.score-board {
  background-color: white;
  min-width: 500px;
  padding: 20px 33px 10px 33px;
  border-radius: 20px;
}

.score-board .avatar {
  display: inline-block;
  height: 45px;
  width: 45px;
  margin-left: 10px;
  margin-right: 10px;
}

.score-board .result-description {
  font-size: 25px;
  font-weight: 800;
  margin-top: 20px;
  margin-bottom: 25px;
}

.score-board .score-board-showdown .card {
  border: 1px solid;
  box-shadow: none;
  margin-left: 2px;
  margin-right: 2px;
}

.score-board .score-board-showdown .card.ineffective {
  opacity: 0.2;
  border: 1px solid #666;
}

.score-board .score-board-showdown .community-cards {
  display: flex;
}

.score-board .score-board-showdown .hand-cards {
  display: flex;
  margin-left: 10px;
}

.score-board .score-board-table {
  width: 100%;
  font-size: 12px;
  margin: 40px auto;
  padding: 10px 40px;
  border-top: 1px dashed;
}

.score-board .score-board-table tr th {
  text-decoration: underline;
}

.score-board .score-board-table tr td {
  padding: 1px;
}

.score-board .score-board-table tr th:first-child {
  text-align: left;
}

.score-board .score-board-table tr td:first-child {
  text-align: left;
}

.score-board .score-board-table tr th:nth-child(2) {
  text-align: center;
}

.score-board .score-board-table tr td:nth-child(2) {
  text-align: center;
}

.score-board .score-board-table tr th:last-child {
  text-align: right;
}

.score-board .score-board-table tr td:last-child {
  text-align: right;
}

.score-board .score-board-table .avatar img{
  display: inline-block;
  height: 36px;
  width: 36px;
}

.score-board .avatar img{
  display: inline-block;
  height: 48px;
  width: 48px;
}

.score-board-toggle {
  position: fixed;
  right: 0;
  top: 0;

  margin-right: 20px;
  margin-top: 12px;

  cursor: pointer;
}

.score-board-toggle > img {
  height: 30px;
  width: 30px;
  opacity: 0.5;
}

.score-board-toggle:hover > img {
  opacity: 1;
  cursor: pointer;
}

.invitation .copy-link-button {
  box-sizing: border-box;
  outline: none;
  background-color: #f6f6f6;
  font-weight: bold;
  cursor: pointer;
}

.invitation .copy-link-button:hover {
  color: #f6f6f6;
  background-color: #888;
}

.chip {
  width: 16px;
  height: 16px;

  @media screen and (min-height: 800px) {
    width: 26px;
    height: 26px;
  }

  @media screen and (min-height: 1000px) {
    width: 30px;
    height: 30px;
  }

  transform: rotateX(30deg);
}

.card {
  width: 60px;
  height: 90px; /* x1.5 */
  border-radius: 6px;

  @media screen and (min-height: 800px) {
    width: 80px;
    height: 120px; /* x1.5 */
    border-radius: 8px;
  }

  @media screen and (min-height: 1000px) {
    width: 100px;
    height: 150px; /* x1.5 */
    border-radius: 10px;
  }

  background-color: #fff;
  box-shadow: 0 2px 1px -1px rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.14), 0 1px 3px 0 rgba(0,0,0,0.12);
}

.avatar {
  display: flex;
  justify-content: center;
  border-radius: 50%;
}

.avatar.highlight {
  box-shadow: 0 0 30px white;
}
/* ... */

